feat: implement get projects query
